# softkut

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  TODO.md  package-info.json
docs/: softkut~.maxref
help/: mc.softcut~.maxhelp  softkut~.maxhelp
source/include/: softkut_control.h  softkut_engine.h
source/projects/mc.softkut_tilde/: CMakeLists.txt  mc.softkut~.cpp
source/projects/softkut_tilde/: CMakeLists.txt  softkut~.cpp
